--- a/elsap/package.json
+++ b/elsap/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "apexcharts": "^3.28.1",
+    "bootstrap": "^5.1.0",
     "ng-apexcharts": "^1.5.12",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
