adicionando as funcionalidades do mapa e marker no front-end

--- a/elsap/angular.json
+++ b/elsap/angular.json
@@ -24,7 +24,12 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+                {
+                  "glob": "**/*",
+                  "input": "node_modules/leaflet/dist/images/",
+                  "output": "./assets"
+                }
             ],
             "styles": [
               "src/styles.css",
@@ -93,13 +98,15 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/favicon.ico"
             ],
             "styles": [
+              "./node_modules/leaflet/dist/leaflet.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/leaflet/dist/leaflet.js"
+            ]
           }
         }
       }
