--- a/elsap/package.json
+++ b/elsap/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "apexcharts": "^3.28.1",
     "bootstrap": "^5.1.0",
+    "leaflet": "^1.7.1",
     "ng-apexcharts": "^1.5.12",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -30,6 +31,7 @@
     "@angular/cli": "~12.2.2",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/leaflet": "^1.7.5",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
