--- a/elsap/package.json
+++ b/elsap/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "amazon-quicksight-embedding-sdk": "^1.17.1",
     "apexcharts": "^3.28.1",
     "bootstrap": "^5.1.2",
     "leaflet": "^1.7.1",
